ci: attempt different mechanism

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     on: workflow_dispatch
+    uses: nigelm/gh_release/.github/workflows/setup.yml@main
     steps:
-      - uses: nigelm/gh_release/.github/workflows/setup.yml@main
       #----------------------------------------------
       # run releaser
       #----------------------------------------------
