ci: rearrange release job meta

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
+name: Overall Release Process
+on: workflow_dispatch
 jobs:
   release:
     needs: test
     runs-on: ubuntu-latest
-    on:
-      workflow_dispatch:
     steps:
       #----------------------------------------------
       # check-out repo and set-up python
