ci: remove dep to allow it to run

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Overall Release Process
 on: workflow_dispatch
 jobs:
   release:
-    needs: test
+    #needs: test
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
