--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,6 @@ version_pattern = [
 version_source = "tag"
 commit_version_number = true
 patch_without_tag = true
-build_command =
+build_command = ""
 upload_to_pypi = false
 check_build_status = false
