--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,6 @@ patch_without_tag = true
 build_command = ""
 upload_to_pypi = false
 check_build_status = false
+upload_to_repository = false
+
+# end
