--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           version: 1.1.12
           virtualenvs-create: true
+          virtualenvs-in-project: true
       #----------------------------------------------
       #       load cached venv if cache exists
       #----------------------------------------------
