--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,8 +48,8 @@ jobs:
       #----------------------------------------------
       # ensure dist dir in place
       #----------------------------------------------
-      - name: Ensure dist in place
-        run: mkdir dist
+      #- name: Ensure dist in place
+      #  run: mkdir dist
 
       #----------------------------------------------
       # release
@@ -58,8 +58,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          source .venv/bin/activate
           git config user.name github-actions
           git config user.email github-actions@github.com
-          poetry run semantic-release publish
+          semantic-release publish
 
 # end
