fix: try changing poetry path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ version_pattern = [
 version_source = "tag"
 commit_version_number = true
 patch_without_tag = false
-build_command = "poetry build"
+build_command = "~/.local/bin/poetry build"
 upload_to_pypi = false
 check_build_status = true
 upload_to_repository = true
