--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,10 @@ version_pattern = [
 version_source = "tag"
 commit_version_number = true
 patch_without_tag = false
-build_command = "~/.local/bin/poetry build"
+build_command = "poetry build"
 upload_to_pypi = false
 check_build_status = true
-upload_to_repository = true
+upload_to_repository = false
+upload_to_release = true
 
 # end
