--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ commit_version_number = true
 patch_without_tag = false
 build_command = "poetry build"
 upload_to_pypi = false
-check_build_status = true
+check_build_status = false
 upload_to_repository = false
 upload_to_release = true
 
