--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,8 @@ jobs:
         with:
           version: 1.1.12
           virtualenvs-create: true
-          virtualenvs-in-project: true
+          virtualenvs-in-project: false
+          virtualenvs-path: ~/poetry-venv
       #----------------------------------------------
       #       load cached venv if cache exists
       #----------------------------------------------
@@ -38,7 +39,7 @@ jobs:
         id: cached-poetry-dependencies
         uses: actions/cache@v2
         with:
-          path: .venv
+          path: ~/poetry-venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
       # install/activate dependencies
@@ -58,9 +59,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pwd
-          echo ~/.venv
-          source .venv/bin/activate
+          source ~/poetry-venv
           git config user.name github-actions
           git config user.email github-actions@github.com
           semantic-release publish --verbosity=DEBUG
