--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.local  # the path depends on the OS
-          key: poetry-0  # increment to reset cache
+          key: poetry-1  # increment to reset cache
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -46,11 +46,6 @@ jobs:
       #----------------------------------------------
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
-      #----------------------------------------------
-      # ensure dist dir in place
-      #----------------------------------------------
-      #- name: Ensure dist in place
-      #  run: mkdir dist
 
       #----------------------------------------------
       # release
@@ -59,9 +54,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          source ~/poetry-venv
+          source ~/poetry-venv/bin/activate
           git config user.name github-actions
           git config user.email github-actions@github.com
-          semantic-release publish --verbosity=DEBUG
+          semantic-release publish
 
 # end
