--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,27 +23,16 @@ jobs:
       - name: Load cached Poetry installation
         uses: actions/cache@v2
         with:
-          path: ~/.local  # the path depends on the OS
-          key: poetry-1  # increment to reset cache
+          path: |
+            ~/.local
+            .venv
+          key: poetry-1-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
           version: 1.1.12
           virtualenvs-create: true
           virtualenvs-in-project: true
-      - name: Check Poetry
-        run: |
-          poetry config --list
-          poetry env info
-      #----------------------------------------------
-      #       load cached venv if cache exists
-      #----------------------------------------------
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v2
-        with:
-          path: .venv
-          key: poetry-venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
       # install/activate dependencies
       #----------------------------------------------
@@ -61,8 +50,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           semantic-release publish
-
-      - name: Size cache
-        run: du -sh .venv
 
 # end
