--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Set up python
         uses: actions/setup-python@v2
         with:
@@ -21,12 +22,12 @@ jobs:
       # install & configure poetry in cache
       #----------------------------------------------
       - name: Load cached Poetry installation
+        id: cached-poetry-install
         uses: actions/cache@v2
         with:
-          path: |
-            ~/.local
-            .venv
-          key: poetry-1-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          path: ~/.local
+          key: poetry-install-0
+
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -36,6 +37,13 @@ jobs:
       #----------------------------------------------
       # install/activate dependencies
       #----------------------------------------------
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: pvenv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
 
@@ -46,9 +54,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          source .venv/bin/activate
+          # source .venv/bin/activate
           git config user.name github-actions
           git config user.email github-actions@github.com
-          semantic-release publish
+          poetry run semantic-release publish
 
 # end
