--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,49 +4,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
     concurrency: release
+    uses: nigelm/gh_release/.github/workflows/_setup_poetry.yml@main
 
     steps:
-      #----------------------------------------------
-      # check-out repo and set-up python
-      #----------------------------------------------
-      - name: Check out repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Set up python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.10.2
-      #----------------------------------------------
-      # install & configure poetry in cache
-      #----------------------------------------------
-      - name: Load cached Poetry installation
-        id: cached-poetry-install
-        uses: actions/cache@v2
-        with:
-          path: ~/.local
-          key: poetry-install-0
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.1.12
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      #----------------------------------------------
-      # install/activate dependencies
-      #----------------------------------------------
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v2
-        with:
-          path: .venv
-          key: pvenv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install dependencies
-        run: poetry install --no-interaction --no-root
-
       #----------------------------------------------
       # release
       #----------------------------------------------
