--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,15 @@ jobs:
   release:
     runs-on: ubuntu-latest
     concurrency: release
-    uses: nigelm/gh_release/.github/workflows/_setup_poetry.yml@main
 
     steps:
+      - name: Set up repository
+        uses: nigelm/gh_actions_python_poetry_setup@v1
+        with:
+          python-version: 3.10.2
+          poetry-version: 1.1.12
+          fetch-depth: 0
+
       #----------------------------------------------
       # release
       #----------------------------------------------
