--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ click = "^8.0.3"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 python-semantic-release = "^7.23.0"
+mkdocs = "^1.2.3"
+mkdocs-material = "^8.1.8"
+mkdocstrings = "^0.17.0"
+tiangolo-markdown-include = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
