--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,14 +1,9 @@
 # basic set of tests
 name: Tests
 on: push
+
 jobs:
   tests:
-    runs-on: ubuntu-latest
-    name: NOX test run
-    steps:
-    - uses: actions/checkout@v2
-    - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install poetry==1.1.12
-    - run: nox
+    uses: nigelm/gh_release/.github/workflows/_test.yml@main
 
 # end
