--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,31 +17,18 @@ jobs:
           python-version: 3.10.2
           poetry-version: 1.1.12
           fetch-depth: 0
+          token: ${{ secrets.GH_DEPLOY_TOKEN }}
 
       #----------------------------------------------
       # release
       #----------------------------------------------
       - name: Semantic Release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_DEPLOY_TOKEN }}
         run: |
           # source .venv/bin/activate
           git config user.name github-actions
           git config user.email github-actions@github.com
           poetry run semantic-release publish
-
-      - name: run post release test
-        run:  make test
-
-      - name: upload release
-        run: poetry config repositories.test-pypi https://test.pypi.org/legacy/
-      - run: poetry config pypi-token.test-pypi ${{ secrets.PYPI_TOKEN }}
-      - run: poetry publish --build --repository test-pypi
-
-      - name: Setup Git Commit Info
-        run:  git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
-
-      - name: Publish docs
-        run:  poetry run mkdocs gh-deploy
 
 # end
