--- a/.github/workflows/_docs.yml
+++ b/.github/workflows/_docs.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           python-version: 3.10.2
           poetry-version: 1.1.12
+          # needs fetch-depth to be set due to gh pages push
+          fetch-depth: 0
 
       - name: Setup Git Commit Info
         run:  git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
