--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           python-version: 3.10.2
           poetry-version: 1.1.12
+          # needs fetch-depth to be set due to release history deduction
           fetch-depth: 0
           token: ${{ secrets.GH_DEPLOY_TOKEN }}
 
