--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,14 @@
 # basic set of tests
 name: Tests
-on: push
+on:
+  push:
+    tags-ignore:
+      - v*
 
 jobs:
   tests:
     uses: nigelm/gh_release/.github/workflows/_test.yml@main
+  lint:
+    uses: nigelm/gh_release/.github/workflows/_linting.yml@main
 
 # end
