Revert "fix: do not run test on tagged release set"
This reverts commit 8a83b960f8049ab7de633d783fb20f61fcc45dd3.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,14 +1,9 @@
 # basic set of tests
 name: Tests
-on:
-  push:
-    tags-ignore:
-      - v*
+on: push
 
 jobs:
   tests:
     uses: nigelm/gh_release/.github/workflows/_test.yml@main
-  lint:
-    uses: nigelm/gh_release/.github/workflows/_linting.yml@main
 
 # end
