fix: put linters back again

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,5 +5,7 @@ on: push
 jobs:
   tests:
     uses: nigelm/gh_release/.github/workflows/_test.yml@main
+  lint:
+    uses: nigelm/gh_release/.github/workflows/_linting.yml@main
 
 # end
