--- a/.github/workflows/_linting.yml
+++ b/.github/workflows/_linting.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    name: Run Tests
+    name: Run Linters
     runs-on: ubuntu-latest
     steps:
       - name: Set up repository
