fix: corrected ci syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - v*
 
 jobs:
-  test:
+  tests:
     uses: nigelm/gh_release/.github/workflows/_test.yml@main
   lint:
     uses: nigelm/gh_release/.github/workflows/_linting.yml@main
