fix: tweak job order for caching efficiency

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,9 +3,11 @@ name: Tests
 on: push
 
 jobs:
-  tests:
-    uses: nigelm/gh_release/.github/workflows/_test.yml@main
   lint:
     uses: nigelm/gh_release/.github/workflows/_linting.yml@main
+  tests:
+    # we force this dependency because it better heats the cache
+    needs: lint
+    uses: nigelm/gh_release/.github/workflows/_test.yml@main
 
 # end
