fix: make all the internal workflow references relative

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,19 +7,19 @@ on:
 
 jobs:
   tests:
-    uses: nigelm/gh_release/.github/workflows/_test.yml@main
+    uses: ./.github/workflows/_test.yml
   lint:
-    uses: nigelm/gh_release/.github/workflows/_linting.yml@main
+    uses: ./.github/workflows/_linting.yml
 
   upload:
     needs: [tests, lint]
-    uses: nigelm/gh_release/.github/workflows/_upload.yml@main
+    uses: ./.github/workflows/_upload.yml
     secrets:
       PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
 
   docs:
     needs: [tests, lint]
-    uses: nigelm/gh_release/.github/workflows/_docs.yml@main
+    uses: ./.github/workflows/_docs.yml
 
 
 # end
