--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,12 @@ name: Overall Release Process
 on: workflow_dispatch
 jobs:
   tests:
-    uses: nigelm/gh_release/.github/workflows/_test.yml@main
+    uses: ./.github/workflows/_test.yml
   lint:
-    uses: nigelm/gh_release/.github/workflows/_linting.yml@main
+    uses: ./.github/workflows/_linting.yml
   full_test:
     needs: [tests, lint]
-    uses: nigelm/gh_release/.github/workflows/_full_tests.yml@main
+    uses: ./.github/workflows/_full_tests.yml
 
   release:
     runs-on: ubuntu-latest
